# software-renderers

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
glad/include/glad/: glad.h
glad/src/: glad.c
include/: render.h
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
src/rasterizer/: main.cpp  rasterizer.cpp  rasterizer.h
src/raytracer/: main.cpp  raytracer.cpp  raytracer.h
